# kemail

./: README.md
backend/: Cargo.toml  docker-compose.yaml
backend/src/: main.rs
backend/src/handler/: auth.rs  mod.rs  user.rs
backend/src/model/: user.rs
