[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
mongodb = "2.2.2"
dotenv = "0.15.0"
rust-argon2 = "1.0.0"